--- a/CK.StObj.Runtime/CK.StObj.Runtime.csproj
+++ b/CK.StObj.Runtime/CK.StObj.Runtime.csproj
@@ -14,7 +14,7 @@ This is a SetupDependency of CK.StObj.Model that is dynamically resolved by CKSe
   <ItemGroup>
     <ProjectReference Include="..\CK.StObj.Model\CK.StObj.Model.csproj" />
     <PackageReference Include="CK.CodeGen" Version="0.0.0--053im5u-develop" />
-    <PackageReference Include="CK.Globalization" Version="0.0.0--053iji0-develop" />
+    <PackageReference Include="CK.Globalization" Version="0.0.0--053inyv-develop" />
     <PackageReference Include="CK.Setup.Dependency" Version="0.0.0--053ijhz-develop" />
   </ItemGroup>
   <ItemGroup>
