Releasing 27.0.0-a. Upgrading release dependencies: NuGet:CK.Monitoring/22.0.0-a, NuGet:CK.ActivityMonitor.SimpleSender/22.0.0-a, NuGet:CK.ActivityMonitor.SimpleSender/22.0.0-a, NuGet:CK.Testing.Nunit/11.0.0-a, NuGet:CK.Globalization/0.8.0-a, NuGet:CK.Testing.Nunit/11.0.0-a, NuGet:CK.Testing.Nunit/11.0.0-a, NuGet:CK.AppIdentity/0.6.0-a, NuGet:CK.Testing.Monitoring/11.0.0-a, NuGet:CK.Testing.Nunit/11.0.0-a, NuGet:CK.CodeGen.Roslyn/11.0.0-a, NuGet:CK.Core/21.0.0-a, NuGet:CK.CodeGen/11.0.0-a, NuGet:CK.Globalization/0.8.0-a, NuGet:CK.Setup.Dependency/19.0.0-a.

--- a/CK.Testing.StObjEngine/CK.Testing.StObjEngine.csproj
+++ b/CK.Testing.StObjEngine/CK.Testing.StObjEngine.csproj
@@ -5,8 +5,8 @@
     <LangVersion>11</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.AppIdentity" Version="0.0.0--053imdg-develop" />
-    <PackageReference Include="CK.Testing.Monitoring" Version="0.0.0--053ijhr-develop" />
+    <PackageReference Include="CK.AppIdentity" Version="0.6.0-a" />
+    <PackageReference Include="CK.Testing.Monitoring" Version="11.0.0-a" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
     <ProjectReference Include="..\CK.Engine\CK.Engine.csproj" />
   </ItemGroup>
