--- a/CK.Engine.Configuration/CK.Engine.Configuration.csproj
+++ b/CK.Engine.Configuration/CK.Engine.Configuration.csproj
@@ -4,9 +4,7 @@
     <LangVersion>11</LangVersion>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="CK.Abstractions" Version="27.0.0-a01-00-0001-develop" />
     <PackageReference Include="CK.ActivityMonitor.SimpleSender" Version="22.0.0-a00-00-0008-develop" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\CK.Abstractions\CK.Abstractions.csproj" />
   </ItemGroup>
 </Project>
