Releasing 27.0.0. Upgrading release dependencies: NuGet:CK.Testing.Nunit/11.0.0, NuGet:CK.Monitoring/22.0.0, NuGet:CK.ActivityMonitor.SimpleSender/22.0.0, NuGet:CK.Abstractions/27.0.0, NuGet:CK.ActivityMonitor.SimpleSender/22.0.0, NuGet:CK.Testing.Nunit/11.0.0, NuGet:CK.Globalization/0.8.0, NuGet:CK.Testing.Nunit/11.0.0, NuGet:CK.Testing.Nunit/11.0.0, NuGet:CK.AppIdentity/0.6.0, NuGet:CK.Testing.Monitoring/11.0.0, NuGet:CK.Testing.Nunit/11.0.0, NuGet:CK.CodeGen.Roslyn/11.0.0, NuGet:CK.Core/21.0.0, NuGet:CK.CodeGen/11.0.0, NuGet:CK.Globalization/0.8.0, NuGet:CK.Setup.Dependency/19.0.0.

--- a/CK.Poco.Exchange/CK.Poco.Exchange.csproj
+++ b/CK.Poco.Exchange/CK.Poco.Exchange.csproj
@@ -6,7 +6,7 @@
     </Description>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Globalization" Version="0.8.0-a00-00-0026-develop" />
+    <PackageReference Include="CK.Globalization" Version="0.8.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.StObj.Model\CK.StObj.Model.csproj" />
