--- a/CK.AppBuilder/CK.AppBuilder.csproj
+++ b/CK.AppBuilder/CK.AppBuilder.csproj
@@ -14,7 +14,7 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Monitoring" Version="22.0.0-a00-00-0013-develop" />
+    <PackageReference Include="CK.Monitoring" Version="22.0.0" />
     <ProjectReference Include="..\CK.Engine\CK.Engine.csproj" />
   </ItemGroup>
 </Project>
