--- a/CK.Engine.Configuration/CK.Engine.Configuration.csproj
+++ b/CK.Engine.Configuration/CK.Engine.Configuration.csproj
@@ -4,7 +4,7 @@
     <LangVersion>11</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Abstractions" Version="27.0.0-a01-00-0004-develop" />
-    <PackageReference Include="CK.ActivityMonitor.SimpleSender" Version="22.0.0-a00-00-0011-develop" />
+    <PackageReference Include="CK.Abstractions" Version="27.0.0" />
+    <PackageReference Include="CK.ActivityMonitor.SimpleSender" Version="22.0.0" />
   </ItemGroup>
 </Project>
