--- a/CK.StObj.Runtime/CK.StObj.Runtime.csproj
+++ b/CK.StObj.Runtime/CK.StObj.Runtime.csproj
@@ -13,9 +13,9 @@ This is a SetupDependency of CK.StObj.Model that is dynamically resolved by CKSe
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.StObj.Model\CK.StObj.Model.csproj" />
-    <PackageReference Include="CK.CodeGen" Version="11.0.0-a00-00-0013-develop" />
-    <PackageReference Include="CK.Globalization" Version="0.8.0-a00-00-0026-develop" />
-    <PackageReference Include="CK.Setup.Dependency" Version="19.0.0-a00-00-0011-develop" />
+    <PackageReference Include="CK.CodeGen" Version="11.0.0" />
+    <PackageReference Include="CK.Globalization" Version="0.8.0" />
+    <PackageReference Include="CK.Setup.Dependency" Version="19.0.0" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
