--- a/CK.Testing.StObjEngine/CK.Testing.StObjEngine.csproj
+++ b/CK.Testing.StObjEngine/CK.Testing.StObjEngine.csproj
@@ -5,8 +5,8 @@
     <LangVersion>11</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.AppIdentity" Version="0.6.0-a00-00-0017-develop" />
-    <PackageReference Include="CK.Testing.Monitoring" Version="11.0.0-a00-00-0013-develop" />
+    <PackageReference Include="CK.AppIdentity" Version="0.6.0" />
+    <PackageReference Include="CK.Testing.Monitoring" Version="11.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.0" />
     <ProjectReference Include="..\CK.Engine\CK.Engine.csproj" />
   </ItemGroup>
