--- a/CK.Poco.Exchange/CK.Poco.Exchange.csproj
+++ b/CK.Poco.Exchange/CK.Poco.Exchange.csproj
@@ -6,7 +6,7 @@
     </Description>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Globalization" Version="0.8.1--0009-develop" />
+    <PackageReference Include="CK.Globalization" Version="1.0.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.StObj.Model\CK.StObj.Model.csproj" />
