--- a/CK.StObj.Runtime/CK.StObj.Runtime.csproj
+++ b/CK.StObj.Runtime/CK.StObj.Runtime.csproj
@@ -13,9 +13,9 @@ This is a SetupDependency of CK.StObj.Model that is dynamically resolved by CKSe
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.StObj.Model\CK.StObj.Model.csproj" />
-    <PackageReference Include="CK.CodeGen" Version="11.0.0" />
-    <PackageReference Include="CK.Globalization" Version="1.0.0" />
-    <PackageReference Include="CK.Setup.Dependency" Version="19.0.0" />
+    <PackageReference Include="CK.CodeGen" Version="11.0.1--0008-develop" />
+    <PackageReference Include="CK.Globalization" Version="1.0.1--0001-develop" />
+    <PackageReference Include="CK.Setup.Dependency" Version="19.0.1--0008-develop" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
