Releasing 28.1.0. Upgrading release dependencies: NuGet:CK.Testing.Nunit/11.1.0, NuGet:CK.Monitoring/22.1.0, NuGet:CK.ActivityMonitor.SimpleSender/22.1.0, NuGet:CK.Abstractions/27.0.0, NuGet:CK.ActivityMonitor.SimpleSender/22.1.0, NuGet:CK.Testing.Nunit/11.1.0, NuGet:CK.Globalization/1.1.0, NuGet:CK.Testing.Nunit/11.1.0, NuGet:CK.Testing.Nunit/11.1.0, NuGet:CK.AppIdentity/0.7.0, NuGet:CK.Testing.Monitoring/11.1.0, NuGet:CK.Testing.Nunit/11.1.0, NuGet:CK.CodeGen.Roslyn/11.1.0, NuGet:CK.Core/21.1.0, NuGet:CK.CodeGen/11.1.0, NuGet:CK.Globalization/1.1.0, NuGet:CK.Setup.Dependency/19.1.0.

--- a/CK.AppBuilder/CK.AppBuilder.csproj
+++ b/CK.AppBuilder/CK.AppBuilder.csproj
@@ -14,7 +14,7 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Monitoring" Version="22.0.1--0009-develop" />
+    <PackageReference Include="CK.Monitoring" Version="22.1.0" />
     <ProjectReference Include="..\CK.Engine\CK.Engine.csproj" />
   </ItemGroup>
 </Project>
