--- a/CK.Engine.TypeCollector/CK.Engine.TypeCollector.csproj
+++ b/CK.Engine.TypeCollector/CK.Engine.TypeCollector.csproj
@@ -4,7 +4,7 @@
     <LangVersion>11</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.ActivityMonitor.SimpleSender" Version="22.0.1--0009-develop" />
+    <PackageReference Include="CK.ActivityMonitor.SimpleSender" Version="22.1.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.Engine.Configuration\CK.Engine.Configuration.csproj" />
