--- a/Tests/CK.StObj.Engine.Tests/CK.StObj.Engine.Tests.csproj
+++ b/Tests/CK.StObj.Engine.Tests/CK.StObj.Engine.Tests.csproj
@@ -10,7 +10,7 @@
     <EmbeddedResource Include="Res\TextFile.txt;Another\Namespace\TextFile.txt;SubNamespace\**\*.txt" Exclude="bin\**;obj\**;**\*.xproj;packages\**;@(EmbeddedResource)" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Testing.Nunit" Version="11.0.1--0009-develop" />
+    <PackageReference Include="CK.Testing.Nunit" Version="11.1.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" PrivateAssets="all" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.6.0" />
   </ItemGroup>
