--- a/CK.Testing.StObjEngine/CK.Testing.StObjEngine.csproj
+++ b/CK.Testing.StObjEngine/CK.Testing.StObjEngine.csproj
@@ -5,8 +5,8 @@
     <LangVersion>11</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.AppIdentity" Version="0.7.1--0019-develop" />
-    <PackageReference Include="CK.Testing.Monitoring" Version="11.1.1--0024-develop" />
+    <PackageReference Include="CK.AppIdentity" Version="0.8.0" />
+    <PackageReference Include="CK.Testing.Monitoring" Version="12.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.0" />
     <ProjectReference Include="..\CK.Engine\CK.Engine.csproj" />
   </ItemGroup>
