CI build: Upgrading dependencies:
NuGet:CK.Testing.Nunit/12.1.1--0001-develop
NuGet:CK.Monitoring/23.1.1--0001-develop
NuGet:CK.ActivityMonitor.SimpleSender/23.1.1--0001-develop
NuGet:CK.Abstractions/27.0.1--0006-develop
NuGet:CK.ActivityMonitor.SimpleSender/23.1.1--0001-develop
NuGet:CK.Testing.Nunit/12.1.1--0001-develop
NuGet:CK.Globalization/2.1.1--0001-develop
NuGet:CK.Testing.Nunit/12.1.1--0001-develop
NuGet:CK.Testing.Nunit/12.1.1--0001-develop
NuGet:CK.AppIdentity/0.9.1--0001-develop
NuGet:CK.Testing.Monitoring/12.1.1--0001-develop
NuGet:CK.Testing.Nunit/12.1.1--0001-develop
NuGet:CK.CodeGen.Roslyn/12.1.1--0001-develop
NuGet:CK.Core/22.1.1--0001-develop
NuGet:CK.CodeGen/12.1.1--0001-develop
NuGet:CK.Globalization/2.1.1--0001-develop
NuGet:CK.Setup.Dependency/20.1.1--0002-develop.

--- a/CK.AppBuilder/CK.AppBuilder.csproj
+++ b/CK.AppBuilder/CK.AppBuilder.csproj
@@ -14,7 +14,7 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Monitoring" Version="23.1.0" />
+    <PackageReference Include="CK.Monitoring" Version="23.1.1--0001-develop" />
     <ProjectReference Include="..\CK.Engine\CK.Engine.csproj" />
   </ItemGroup>
 </Project>
