--- a/Tests/CK.Poco.Exc.Json.Tests/CK.Poco.Exc.Json.Tests.csproj
+++ b/Tests/CK.Poco.Exc.Json.Tests/CK.Poco.Exc.Json.Tests.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="../../CK.Testing.StObjEngine/CK.Testing.StObjEngine.csproj" />
-    <PackageReference Include="CK.Testing.Nunit" Version="12.1.0" />
+    <PackageReference Include="CK.Testing.Nunit" Version="12.1.1--0001-develop" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.6.0" />
   </ItemGroup>
