--- a/Tests/CK.Engine.TypeCollector.Tests/CK.Engine.TypeCollector.Tests.csproj
+++ b/Tests/CK.Engine.TypeCollector.Tests/CK.Engine.TypeCollector.Tests.csproj
@@ -5,7 +5,7 @@
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Testing.Nunit" Version="12.1.1--0003-develop" />
+    <PackageReference Include="CK.Testing.Nunit" Version="13.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" PrivateAssets="all" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.6.0" />
   </ItemGroup>
