--- a/CK.Testing.StObjEngine/CK.Testing.StObjEngine.csproj
+++ b/CK.Testing.StObjEngine/CK.Testing.StObjEngine.csproj
@@ -5,8 +5,8 @@
     <LangVersion>11</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.AppIdentity" Version="0.11.1--0001-develop" />
-    <PackageReference Include="CK.Testing.Monitoring" Version="14.0.1--0001-develop" />
+    <PackageReference Include="CK.AppIdentity" Version="0.11.0" />
+    <PackageReference Include="CK.Testing.Monitoring" Version="14.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.7" />
     <ProjectReference Include="..\CK.Engine\CK.Engine.csproj" />
   </ItemGroup>
