--- a/CK.AppBuilder/CK.AppBuilder.csproj
+++ b/CK.AppBuilder/CK.AppBuilder.csproj
@@ -14,7 +14,7 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Monitoring" Version="25.0.0" />
+    <PackageReference Include="CK.Monitoring" Version="25.0.1--0003-develop" />
     <ProjectReference Include="..\CK.Engine\CK.Engine.csproj" />
   </ItemGroup>
 </Project>
