--- a/CK.Engine.TypeCollector/CK.Engine.TypeCollector.csproj
+++ b/CK.Engine.TypeCollector/CK.Engine.TypeCollector.csproj
@@ -3,7 +3,7 @@
     <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.ActivityMonitor.SimpleSender" Version="25.0.1--0004-develop" />
+    <PackageReference Include="CK.ActivityMonitor.SimpleSender" Version="25.0.1" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.Engine.Configuration\CK.Engine.Configuration.csproj" />
