--- a/CK.Engine.Configuration/CK.Engine.Configuration.csproj
+++ b/CK.Engine.Configuration/CK.Engine.Configuration.csproj
@@ -4,7 +4,7 @@
     <LangVersion>11</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Abstractions" Version="28.0.2--0001-develop" />
-    <PackageReference Include="CK.ActivityMonitor.SimpleSender" Version="25.0.2--0003-develop" />
+    <PackageReference Include="CK.Abstractions" Version="28.0.1" />
+    <PackageReference Include="CK.ActivityMonitor.SimpleSender" Version="25.0.1" />
   </ItemGroup>
 </Project>
