CI build: Upgrading dependencies:
NuGet:CK.Testing.Nunit/14.0.2--0005-develop
NuGet:CK.Monitoring/25.0.2--0017-develop
NuGet:CK.ActivityMonitor.SimpleSender/25.0.2--0005-develop
NuGet:CK.Abstractions/28.0.2--0003-develop
NuGet:CK.ActivityMonitor.SimpleSender/25.0.2--0005-develop
NuGet:CK.Testing.Nunit/14.0.2--0005-develop
NuGet:CK.Globalization/4.0.3--0001-develop
NuGet:CK.Testing.Nunit/14.0.2--0005-develop
NuGet:CK.Testing.Nunit/14.0.2--0005-develop
NuGet:CK.AppIdentity/0.11.2--0003-develop
NuGet:CK.Testing.Monitoring/14.0.2--0005-develop
NuGet:CK.Testing.Nunit/14.0.2--0005-develop
NuGet:CK.CodeGen.Roslyn/14.0.2--0003-develop
NuGet:CK.Core/24.0.1--0002-develop
NuGet:CK.CodeGen/14.0.2--0003-develop
NuGet:CK.Globalization/4.0.3--0001-develop
NuGet:CK.Setup.Dependency/22.0.2--0003-develop.

--- a/CK.AppBuilder/CK.AppBuilder.csproj
+++ b/CK.AppBuilder/CK.AppBuilder.csproj
@@ -14,7 +14,7 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Monitoring" Version="25.0.1" />
+    <PackageReference Include="CK.Monitoring" Version="25.0.2--0017-develop" />
     <ProjectReference Include="..\CK.Engine\CK.Engine.csproj" />
   </ItemGroup>
 </Project>
