--- a/CK.Poco.Exchange/CK.Poco.Exchange.csproj
+++ b/CK.Poco.Exchange/CK.Poco.Exchange.csproj
@@ -6,7 +6,7 @@
     </Description>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Globalization" Version="4.0.2" />
+    <PackageReference Include="CK.Globalization" Version="4.0.3--0001-develop" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.StObj.Model\CK.StObj.Model.csproj" />
