--- a/CK.StObj.Runtime/CK.StObj.Runtime.csproj
+++ b/CK.StObj.Runtime/CK.StObj.Runtime.csproj
@@ -15,9 +15,9 @@
   <ItemGroup>
     <!-- Temporary adaptation until CK.Engine fully replaces this package. -->
     <ProjectReference Include="..\CK.Engine.TypeCollector\CK.Engine.TypeCollector.csproj" />
-    <PackageReference Include="CK.CodeGen" Version="14.0.1" />
-    <PackageReference Include="CK.Globalization" Version="4.0.2" />
-    <PackageReference Include="CK.Setup.Dependency" Version="22.0.1" />
+    <PackageReference Include="CK.CodeGen" Version="14.0.2--0003-develop" />
+    <PackageReference Include="CK.Globalization" Version="4.0.3--0001-develop" />
+    <PackageReference Include="CK.Setup.Dependency" Version="22.0.2--0003-develop" />
     <ProjectReference Include="..\CK.StObj.Model\CK.StObj.Model.csproj" />
   </ItemGroup>
   <ItemGroup>
