--- a/Tests/CK.Poco.Exc.Json.Tests/CK.Poco.Exc.Json.Tests.csproj
+++ b/Tests/CK.Poco.Exc.Json.Tests/CK.Poco.Exc.Json.Tests.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="../../CK.Testing.StObjEngine/CK.Testing.StObjEngine.csproj" />
-    <PackageReference Include="CK.Testing.Nunit" Version="14.0.1" />
+    <PackageReference Include="CK.Testing.Nunit" Version="14.0.2--0005-develop" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
     <PackageReference Include="NUnit3TestAdapter" Version="5.1.0" />
   </ItemGroup>
