--- a/Tests/StObjEngineTesting/Tests/Sample.Engine.Tests/Sample.Engine.Tests.csproj
+++ b/Tests/StObjEngineTesting/Tests/Sample.Engine.Tests/Sample.Engine.Tests.csproj
@@ -6,7 +6,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\CK.Testing.StObjEngine\CK.Testing.StObjEngine.csproj" />
     <ProjectReference Include="..\..\Sample.Engine\Sample.Engine.csproj" />
-    <PackageReference Include="CK.Testing.Nunit" Version="14.0.1" />
+    <PackageReference Include="CK.Testing.Nunit" Version="14.0.2--0005-develop" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
     <PackageReference Include="NUnit3TestAdapter" Version="5.1.0" />
   </ItemGroup>
