--- a/CK.StObj.Engine/CK.StObj.Engine.csproj
+++ b/CK.StObj.Engine/CK.StObj.Engine.csproj
@@ -13,8 +13,8 @@ This is a SetupDependency of CK.StObj.Runtime (that is itself a SetuoDependency 
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.StObj.Runtime\CK.StObj.Runtime.csproj" />
-    <PackageReference Include="CK.CodeGen.Roslyn" Version="14.0.2--0006-develop" />
-    <PackageReference Include="CK.Core" Version="24.0.1--0002-develop" />
+    <PackageReference Include="CK.CodeGen.Roslyn" Version="14.0.2" />
+    <PackageReference Include="CK.Core" Version="24.0.1" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
