--- a/Tests/CK.Engine.TypeCollector.Tests/CK.Engine.TypeCollector.Tests.csproj
+++ b/Tests/CK.Engine.TypeCollector.Tests/CK.Engine.TypeCollector.Tests.csproj
@@ -5,7 +5,7 @@
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Testing.Nunit" Version="14.0.2--0008-develop" />
+    <PackageReference Include="CK.Testing.Nunit" Version="14.1.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.1" PrivateAssets="all" />
     <PackageReference Include="NUnit3TestAdapter" Version="5.1.0" />
   </ItemGroup>
